# ServiseBasedArchProject

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  notes.md  readme.md  test_suites.py  traefik.yml
GUI/: CMakeLists.txt  dockerfile  readme
GUI/assets/ModelsRaw/: BottomHoles.blend  BottomHoles.blend1  BottomHoles.mtl  EtIdle.blend  EtIdle.blend1  FourHoles.blend1  TopHole.blend  TopHole.blend1  UltraHole.blend1
GUI/assets/et/: EtIdle.glb  EtIdle.mtl
GUI/assets/scenes/: DC.mtl  Forest.mtl  FourHoles.mtl  TopHole.mtl  UltraHole.mtl
GUI/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
GUI/src/: EtDescriptors.c++  EtDevice.c++.cpp  EtDevice.hpp  EtFrameInfo.hpp  EtGameObject.hpp  EtMain.c++  EtMain.hpp  EtModel.c++  EtModel.hpp  EtPipeline.c++  EtPipeline.hpp  EtRenderer.hpp  EtSwapChain.c++  EtSwapChain.hpp  EtWindow.c++  EtWindow.hpp  Et_pipeline.c++  Et_pipeline.hpp  KeyboardMovementController.c++  KeyboardMovementController.hpp  SimpleRenderSystem.c++  SimpleRenderSystem.hpp
services/game_service/: CMakeLists.txt  Dockerfile  main.cc  main.cpp  test_suite.py
services/game_service/.cache/clangd/index/: game_event_handlers.cpp.0F24226EA710608D.idx  game_event_handlers.cpp.91E3A7B1896841AD.idx  game_event_handlers.hpp.8EFD0B07397502AB.idx  game_event_handlers.hpp.C395AD4A3E330868.idx  game_logic.cpp.2934AEE3AF85B3F0.idx  game_logic.cpp.B8DB2F4D289037AE.idx  game_logic.hpp.2E4AB38F76BF4638.idx  game_loop.cpp.38737660F0586177.idx  game_loop.cpp.863ACAB89DA2B214.idx  game_loop.hpp.8EB5A429F574EF76.idx  game_loop.hpp.F3D507245B72853D.idx  game_state.cpp.52DC099C4198FA50.idx  game_state.cpp.E0EEDD71BA23ECBE.idx  game_state.hpp.289E8E4E88FF7915.idx  game_state.hpp.3718611F9E11A9BF.idx  input_event.hpp.7C4CE0BB1D752EF3.idx  input_event.hpp.A83B393956E83E4D.idx  input_queue.hpp.7D54EAB16A6B2126.idx  input_queue.hpp.8FEA4674E485B67F.idx  main.cpp.0EE23A1B7F752937.idx  message_builders.cpp.6BC1A04A295A1EEA.idx  message_builders.cpp.931DA2E21B98F252.idx  message_builders.hpp.2B19325B15FD491C.idx  message_builders.hpp.513627AA19E4DA8E.idx  output_queue.hpp.AF9971AFABC5D013.idx  output_queue.hpp.C036A9F5C00B48BF.idx  save_client.cpp.4D4E5FD3E15C00B3.idx  save_client.cpp.F4BD3D945120CCD7.idx  (+25 more)
services/game_service/engine/: game_event_handlers.hpp  game_loop.cpp  game_loop.hpp  game_state.cpp  input_event.hpp  message_builders.cpp  message_builders.hpp  save_client.cpp  save_client.hpp  websocket_server.cpp  websocket_server.hpp  world_loader.cpp  world_loader.hpp  world_parsing.cpp  world_parsing.hpp  world_validation.cpp  world_validation.hpp
services/game_service/engine/events/: game_event_handlers.cpp  game_event_handlers.hpp  input_event.hpp
services/game_service/engine/network/: input_queue.hpp  output_queue.hpp  save_client.cpp  sender_thread.hpp  websocket_server.cpp  websocket_server.hpp
services/game_service/engine/protocol/: message_builders.cpp  message_builders.hpp
services/game_service/engine/save/: publisher_thread.cpp  publisher_thread.hpp  save_client.cpp  save_client.hpp  save_event.hpp  save_event_builder.cpp  save_event_builder.hpp  save_publisher.cpp  save_publisher.hpp
services/game_service/engine/session/: game_loop.cpp  game_loop.hpp
services/game_service/engine/simulation/: game_logic.cpp  game_logic.hpp
services/game_service/engine/state/: game_state.cpp  game_state.hpp
services/game_service/engine/util/: concurrent_queue.hpp  visitor.hpp
services/game_service/engine/world/: tileset_loader.cpp  tileset_loader.hpp  world_loader.cpp  world_loader.hpp  world_parsing.cpp  world_parsing.hpp  world_validation.cpp  world_validation.hpp
services/game_service/engine_restructure_snapshot_2026-05-25/: MANIFEST.txt  RESTORE.md
services/game_service/engine_restructure_snapshot_2026-05-25/engine/: game_event_handlers.cpp  game_logic.cpp  game_logic.hpp  game_loop.cpp  game_loop.hpp  game_state.hpp  input_queue.hpp  message_builders.cpp  message_builders.hpp  save_client.cpp  sender_thread.hpp  websocket_server.cpp  world_parsing.cpp  world_parsing.hpp  world_validation.cpp  world_validation.hpp
services/game_service/models/: game_state.hpp  tileset.h  tileset.hpp  types.hpp  world.hpp
services/gui_service/: CMakeLists.txt  Dockerfile  compile.sh  dockerfile  readme
services/gui_service/assets/ModelsRaw/: BottomHoles.blend  BottomHoles.blend1  EtIdle.blend1  FourHoles.blend  FourHoles.blend1  TopHole.blend  UltraHole.blend  UltraHole.blend1
services/gui_service/assets/scenes/: DC.mtl  Forest.mtl  FourHoles.mtl  TopHole.mtl  UltraHole.mtl  UnderHoles.mtl
services/gui_service/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
services/gui_service/src/: EtBuffer.c++  EtBuffer.hpp  EtCamera.c++  EtCamera.hpp  EtDescriptors.hpp  EtDevice.c++.cpp  EtDevice.hpp  EtGameObject.c++  EtMain.c++  EtMain.hpp  EtPipeline.c++  EtPipeline.hpp  EtRenderer.c++  EtRenderer.hpp  EtSwapChain.hpp  EtUtils.hpp  EtWindow.c++  EtWindow.hpp  KeyboardMovementController.c++  KeyboardMovementController.hpp  LoggerInner.c++  LoggerInner.hpp  Main.c++  SimpleRenderSystem.hpp  WebSockets.c++  WebSockets.hpp
(+23 files in other folders)
